<resources>
    <!-- App Name for App Icon -->
    <string name="app_name">1138 Scouting App</string>

    <!-- Empty String -->
    <string name="empty"></string>

    <!-- App Version -->
    <string name="app_version">3.1.3</string>

    <!-- Undo and Redo Buttons -->
    <string name="undo_title">Undo</string>
        <string name="undo_button_description">Undo last action</string>
    <string name="redo_title">Redo</string>
        <string name="redo_button_description">Redo last action undone</string>

    <!-- Next, Back, and Submit Buttons -->
    <string name="next_button_title">Next</string>
    <string name="back_button_title">Back</string>

    <!-- Pre-Auton Page TODO hints might need to be removed-->
    <string name="pre_auton_title">Pre-Auton</string>
    <string name="name_prompt_title">Name of Scouter</string>
    <string name="match_number_title">Match Number</string>
        <!-- Team Color Buttons -->
        <string name="team_color_title">Team Color</string>
        <string name="team_color_red">RED</string>
        <string name="team_color_blue">BLUE</string>
    <string name="team_prompt_title">Team Number</string>
    <string name="field_image_desc">Image of field from top down view.</string>
        <!-- Starting Position Buttons -->
        <string name="start_processor">Processor</string>
        <string name="start_middle">Middle</string>
        <string name="start_far">Far</string>
    <string name="no_show_title">Team didn\'t show up</string>
    <string name="blue_general_position">Blue Generic</string>
    <string name="red_general_position">Red Generic</string>
    <string name="hamburger_desc">Menu Button</string>
    <string name="menu_connect_title">Connect</string>
    <string name="menu_reset_title">Reset</string>
    <string name="menu_archive_title">Archive</string>
    <string name="menu_practice_title">Practice</string>
    <string name="menu_replay_title">Replay</string>
    <string name="menu_admin_title">Admin</string>

    <!-- Admin Menu -->
    <string name="admin_title">Admin Menu</string>
    <string name="override_title">Manual Override</string>
    <string name="save_close_button">Save and Close</string>

    <!-- Auton Popup -->
    <string name="auton_start_prompt">Press when Auton starts</string>
    <string name="back_button">Back</string>
    <string name="start_button">Start</string>

<!--    <string name=""></string>-->

    <!-- Auton Page -->
    <string name="auton_title">Auton</string>
    <string name="reef_image_desc">Side profile of the reef.</string>
    <string name="button_counter_default">0</string>
    <string name="coral_pickup_title">Coral Pickup:</string>
    <string name="algae_removed_title">Algae Removed:</string>
    <string name="scored_button_title">Scored</string>
    <string name="missed_button_title">Missed</string>
    <string name="processor_button_title">Processor</string>
    <string name="net_button_title">Net</string>
    <string name="leave_checkbox_title">Leave (Taxi):</string>

    <!-- Teleop Popup -->
    <string name="teleop_start_prompt">Press when Teleop starts</string>

    <!-- Teleop Page -->
    <string name="teleop_title">Teleop</string>
    <string name="hang_started_title">Hang started:</string>

    <!-- Post Match Page -->
    <string name="post_match_title">Post Match</string>
    <string name="hang_spinner_title">Hang successful?</string>
    <string name="hang_failed_title">Hang Failed:</string>
    <string-array name="hang_spinner_options">
        <item>Not Attempted</item>
        <item>Deep</item>
        <item>Shallow</item>
        <item>Park</item>
    </string-array>

    <!-- Submission Confirmation -->
    <string name="confirm_submit_title">Are you sure you want to submit?</string>
    <string name="submit_button_title">Submit</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="confirm_reset_title">Are you sure you want to reset?</string>
    <string name="confirm_reset_button">Reset</string>
    <string name="confirm_practice_title">Are you sure you want to practice scout this match?</string>
    <string name="confirm_practice_button">Practice</string>
    <string name="confirm_replay_title">Are you sure you want to make this match a replay?</string>
    <string name="confirm_replay_button">Replay</string>

    <!-- Bluetooth -->
    <string name="connected_status_title">Connected</string>
    <string name="disconnected_status_title">Disconnected</string>
    <string name="archive_title">Menu</string>

</resources>
