<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/background_detect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/red"
        android:alpha="0"
        android:clickable="true"
        android:orientation="vertical">
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">



        <TextView
            android:id="@+id/menu_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_connect_title"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:background="@drawable/menu_outline"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_reset_title"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:background="@drawable/menu_outline"
            android:paddingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_connect_button" />

        <TextView
            android:id="@+id/menu_archive_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_archive_title"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:paddingHorizontal="10dp"
            android:background="@drawable/menu_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_reset_button" />

        <TextView
            android:id="@+id/menu_admin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_admin_title"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:paddingHorizontal="10dp"
            android:background="@drawable/menu_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_archive_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>